--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,4 @@ spring:
 
 
 application:
-  description: Projeto criado para o bootcamp DIO - Santander
+  description: Projeto criado para o bootcamp DIO - Santander / Backend
